Prevent message overlaps button on polls

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1828,6 +1828,10 @@ footer {
   .button {
     margin-bottom: $line-height;
   }
+
+  .image-container {
+    min-height: $line-height * 10;
+  }
 }
 
 .section-title-divider {
